@@ -17,6 +17,7 @@
   * Fix the extended callback
   * build_static_method_call() accepts an optional $variable_name argument
   * Add Object#call_extended_method and fix methods with missing returns
+  * Add Object#extract_call_arguments($args) and update call methods
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
